--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
   "vendor": {
     "name": "bower-rails generated vendor assets",
     "dependencies": {
-      "vue": "0.11.4"
+      "vue": "0.11.4",
+      "marked": "0.3.1"
     }
   }
 }
