--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,12 @@
     "name": "bower-rails generated vendor assets",
     "dependencies": {
       "vue": "0.11.4",
-      "marked": "0.3.1"
+      "marked": "0.3.1",
+      "normalize.css": "3.0.2",
+      "bourbon": "4.2.0",
+      "neat": "1.7.1",
+      "modernizr": "2.8.3",
+      "fitvids": "1.1.0"
     }
   }
 }
