--- a/spec/fixtures/posts.yml
+++ b/spec/fixtures/posts.yml
@@ -1,11 +1,11 @@
-alpha:
+short:
   title: 'I love bacon'
   body: 'Bacon ipsum dolor amet shankle beef ribs bresaola chicken.'
   user: ben
   slug: 'i-love-bacon'
   published: true
 
-beta:
+long:
   title: 'I hate bacon'
   body: 'Bacon ipsum dolor amet shankle beef ribs bresaola chicken. <!--more--> Shoulder boudin pork, capicola venison doner landjaeger prosciutto biltong filet mignon porchetta chicken pork belly tenderloin pancetta.'
   user: ben
