--- a/config/env.yml.example
+++ b/config/env.yml.example
@@ -4,12 +4,15 @@ defaults: &defaults
   FOG_PROVIDER:
   FOG_DIRECTORY:
   FOG_REGION:
+  INSTAGRAM_CLIENT_ID: 'some-client-id'
   RAILS_HOST: 'http://localhost'
-  RAILS_PORT: '3000'
+  RAILS_PORT: '5000'
+  REDISCLOUD_URL: 'localhost'
   SENDGRID_SMTP_PORT: '587'
   SENDGRID_SMTP_SERVER:
   SENDGRID_SMTP_LOGIN:
   SENDGRID_SMTP_PASSWORD:
+
 
 development:
   <<: *defaults
