--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-webpack-rails-tutorial",
-  "version": "1.1.0",
-  "description": "Code from the React Webpack tutorial.",
+  "name": "benradler.com",
+  "version": "1.1.1",
+  "description": "benradler.com website",
   "main": "server.js",
   "engines": {
     "node": "0.12.7"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/justin808/react-webpack-rails-tutorial.git"
+    "url": "https://github.com/lordnibbler/railsblog.git"
   },
   "keywords": [
     "react",
@@ -16,12 +16,12 @@
     "comment",
     "example"
   ],
-  "author": "justin808",
+  "author": "ben radler",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/justin808/react-webpack-rails-tutorial/issues"
+    "url": "https://github.com/lordnibbler/railsblog/issues"
   },
-  "homepage": "https://github.com/justin808/react-webpack-rails-tutorial",
+  "homepage": "https://github.com/lordnibbler/railsblog",
   "dependencies": {
     "alt": "^0.17.1",
     "babel-core": "^5.8.20",
