Update env.yml example

--- a/config/env.yml.example
+++ b/config/env.yml.example
@@ -1,6 +1,8 @@
 defaults: &defaults
   AWS_ACCESS_KEY_ID:
   AWS_SECRET_ACCESS_KEY:
+  FLICKR_API_KEY: 'some-api-key'
+  FLICKR_SECRET: 'some-secret'
   FOG_PROVIDER:
   FOG_DIRECTORY:
   FOG_REGION:
