--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,7 @@
     "react-bootstrap": "^0.24.3",
     "react-masonry-component": "^1.0.4",
     "sleep": "^3.0.0",
-    "webpack": "^1.10.5"
+    "webpack": "^1.11.0"
   },
   "devDependencies": {
     "babel-eslint": "^4.0.5",
@@ -52,10 +52,11 @@
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.0.0",
+    "import-glob-loader": "^1.1.0",
     "jscs": "^2.0.0",
     "node-sass": "^3.2.0",
     "react-hot-loader": "^1.2.8",
-    "sass-loader": "^1.0.3",
+    "sass-loader": "^2.0.0",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
     "webpack-dev-server": "^1.10.1"
