--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ config/database.yml
 vendor/assets/bower_components
 
 # local environment variables
-config/env.yml
+.env
 
 # sitemap files
 public/sitemap*
