--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ public/sitemap*
 
 # dotenv
 .env
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
