--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "marked": "0.3.18",
     "modernizr": "^3.9.1",
     "normalize.css": "3.0.2",
+    "photoswipe": "^4.1.3",
     "turbolinks": "^5.2.0"
   },
   "devDependencies": {
