Add photography controller, infinite scroll

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "@client-side-validations/client-side-validations": "^0.1.2",
     "@rails/webpacker": "5.0.1",
     "fitvids": "1.0.2",
+    "infinite-scroll": "^3.0.6",
     "marked": "0.3.18",
+    "masonry-layout": "^4.2.2",
     "modernizr": "^3.9.1",
     "normalize.css": "3.0.2",
     "photoswipe": "^4.1.3",
