--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@client-side-validations/client-side-validations": "^0.1.2",
     "@rails/webpacker": "5.0.1",
     "fitvids": "1.0.2",
+    "imagesloaded": "^4.1.4",
     "infinite-scroll": "^3.0.6",
     "marked": "0.3.18",
     "masonry-layout": "^4.2.2",
