rvm bug https://github.com/rvm/rvm/issues/5133

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: ruby
+dist: focal # temporary fix for https://github.com/rvm/rvm/issues/5133
 bundler_args: --without development production
 sudo: false
 rvm:
