--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: ruby
+-dist: focal # temporary fix for https://github.com/rvm/rvm/issues/5133
 bundler_args: --without development production
 sudo: false
-rvm:
-  - 3.0.1
+# rvm:
+#   - 3.0.1
 
 services:
   - postgresql
@@ -12,6 +13,10 @@ addons:
   chrome: stable
 
 install:
+  # rvm
+  - curl -sSL https://raw.githubusercontent.com/rvm/rvm/master/binscripts/rvm-installer | bash -s stable
+  - rvm reload && rvm install 3.0.1
+
   # chromedriver
   - wget -N http://chromedriver.storage.googleapis.com/2.30/chromedriver_linux64.zip -P ~/
   - unzip ~/chromedriver_linux64.zip -d ~/
