--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,8 @@ install:
   - yarn
 
 before_script:
-    - psql -c 'create database travis_ci_test;' -U postgres
+    # - psql -c 'create database travis_ci_test;' -U postgres
+    - psql -c 'CREATE DATABASE travis_ci_test;' -U postgres -p 5433
     - mv config/database.yml.test config/database.yml
     - RAILS_ENV=test bundle exec rake db:setup --trace
 
