--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,31 @@ services:
   - postgresql
 
 addons:
-  postgresql: '13.4'
+  # Use a different PostgreSQL version than the default:
+  postgresql: 13
+  apt:
+    update: true
+    packages:
+      - postgresql-13
+      - postgresql-client-13
+      # - postgresql-13-postgis-3
+      - postgresql-contrib
   chrome: stable
 
 env:
   global:
-  - PGPORT=5433
-  - PGUSER=postgres
+    - PGPORT=5433
+    - PGUSER=postgres
+
+before_install:
+  # Use trust instead of peer authentication:
+  - >-
+    sudo sed -i
+    -e '/local.*peer/s/postgres/all/'
+    -e 's/peer\|md5/trust/g'
+    /etc/postgresql/13/main/pg_hba.conf
+  # Restart the PostgreSQL service:
+  - sudo service postgresql@13-main restart
 
 install:
   # rvm must be manually installed on dist: focal
@@ -41,8 +59,7 @@ install:
   - yarn
 
 before_script:
-  # - psql -c 'create database travis_ci_test;' -U postgres
-  - psql -c 'CREATE DATABASE travis_ci_test;' -U postgres -p 5433
+  - sudo psql -p 5433 -U postgres -c 'create database my-app;'
   - mv config/database.yml.test config/database.yml
   - RAILS_ENV=test bundle exec rake db:setup --trace
 
