--- a/.travis.yml
+++ b/.travis.yml
@@ -24,16 +24,22 @@ env:
   global:
     - PGPORT=5433
     - PGUSER=postgres
+    - PGHOST=localhost
 
 before_install:
   # Use trust instead of peer authentication:
-  - >-
-    sudo sed -i
-    -e '/local.*peer/s/postgres/all/'
-    -e 's/peer\|md5/trust/g'
-    /etc/postgresql/13/main/pg_hba.conf
-  # Restart the PostgreSQL service:
-  - sudo service postgresql@13-main restart
+  # - >-
+  #   sudo sed -i
+  #   -e '/local.*peer/s/postgres/all/'
+  #   -e 's/peer\|md5/trust/g'
+  #   /etc/postgresql/13/main/pg_hba.conf
+  # # Restart the PostgreSQL service:
+  # - sudo service postgresql@13-main restart
+
+  - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
+  - sudo service postgresql restart
+  - sleep 1
+  - postgres --version
 
 install:
   # rvm must be manually installed on dist: focal
