--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,8 @@ install:
   - yarn
 
 before_script:
-  - sudo psql -p 5433 -U postgres -c 'create database my-app;'
+  - psql -c 'CREATE DATABASE travis_ci_test;' -U postgres -p 5433
+  # - sudo psql -p 5433 -U postgres -c 'create database my-app;'
   - mv config/database.yml.test config/database.yml
   - RAILS_ENV=test bundle exec rake db:setup --trace
 
