--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: ruby
 -dist: focal # temporary fix for https://github.com/rvm/rvm/issues/5133
 bundler_args: --without development production
 sudo: false
-# rvm:
-#   - 3.0.1
 
 services:
   - postgresql
@@ -28,15 +26,9 @@ env:
 
 before_install:
   # Use trust instead of peer authentication:
-  # - >-
-  #   sudo sed -i
-  #   -e '/local.*peer/s/postgres/all/'
-  #   -e 's/peer\|md5/trust/g'
-  #   /etc/postgresql/13/main/pg_hba.conf
-  # # Restart the PostgreSQL service:
-  # - sudo service postgresql@13-main restart
-
   - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
+
+  # Restart the PostgreSQL service:
   - sudo service postgresql restart
   - sleep 1
   - postgres --version
@@ -65,8 +57,10 @@ install:
   - yarn
 
 before_script:
+  # test the psql commands before continuiing
   - psql -c 'CREATE DATABASE travis_ci_test;' -U postgres -p 5433
-  # - sudo psql -p 5433 -U postgres -c 'create database my-app;'
+
+  # set up the rails test database
   - mv config/database.yml.test config/database.yml
   - RAILS_ENV=test bundle exec rake db:setup --trace
 
