--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "dependencies": {
     "@activeadmin/activeadmin": "^2.7.0",
     "@client-side-validations/client-side-validations": "^0.1.2",
-    "@rails/webpacker": "^5.4.3",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@rails/webpacker": "5.4.0",
+    "@tailwindcss/aspect-ratio": "^0.3.0",
+    "@tailwindcss/forms": "^0.3.4",
+    "@tailwindcss/line-clamp": "^0.2.2",
+    "@tailwindcss/typography": "^0.4.1",
+    "autoprefixer": "^10.2.6",
     "fitvids": "1.0.2",
     "imagesloaded": "^4.1.4",
     "infinite-scroll": "^3.0.6",
@@ -12,6 +18,10 @@
     "modernizr": "^3.9.1",
     "normalize.css": "3.0.2",
     "photoswipe": "^4.1.3",
+    "postcss": "^8.2.10",
+    "postcss-loader": "^4.0.3",
+    "sass": "^1.32.7",
+    "tailwindcss": "^2.2.19",
     "turbolinks": "^5.2.0"
   },
   "devDependencies": {
