--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "dependencies": {
     "@activeadmin/activeadmin": "^2.7.0",
     "@client-side-validations/client-side-validations": "^0.1.2",
-    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@rails/webpacker": "5.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.0",
+    "alpine-turbo-drive-adapter": "^1.1.0",
+    "alpinejs": "^3.7.0",
     "autoprefixer": "^10.2.6",
     "fitvids": "1.0.2",
     "imagesloaded": "^4.1.4",
