--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.0",
+    "alpine-magic-helpers": "^1.2.2",
     "alpine-turbo-drive-adapter": "^1.1.0",
-    "alpinejs": "^3.7.0",
+    "alpinejs": "^2.8.2",
     "autoprefixer": "^10.2.6",
     "fitvids": "1.0.2",
     "imagesloaded": "^4.1.4",
