--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "alpine-turbo-drive-adapter": "^1.1.0",
     "alpinejs": "^2.8.2",
     "autoprefixer": "^10.2.6",
+    "file-loader": "^6.2.0",
     "fitvids": "1.0.2",
     "imagesloaded": "^4.1.4",
     "infinite-scroll": "^4.0.0",
