--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@activeadmin/activeadmin": "^2.7.0",
     "@client-side-validations/client-side-validations": "^0.3.0",
     "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@hotwired/turbo": "^7.1.0",
     "@rails/webpacker": "5.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
@@ -25,8 +26,7 @@
     "postcss": "^8.2.10",
     "postcss-loader": "^4.2.0",
     "sass": "^1.32.7",
-    "tailwindcss": "^3.0.0",
-    "turbolinks": "^5.2.0"
+    "tailwindcss": "^3.0.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
