--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
+  },
+  "engines": {
+    "npm": ">=8.0.0",
+    "node": ">=16.0.0",
+    "yarn": ">= 1.22.0"
   }
 }
