--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -48,7 +48,7 @@ Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: 'consistent_comma'
 
 Style/TrailingCommaInBlockArgs:
-  EnforcedStyleForMultiline: 'consistent_comma'
+  Enabled: true
 
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: 'consistent_comma'
