--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,6 @@
 AllCops:
+  # can opt-in to new cops by default by adding this
+  NewCops: enable
   Include:
     - '**/Gemfile'
     - '**/Rakefile'
@@ -46,7 +48,7 @@ Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: 'consistent_comma'
 
 Style/TrailingCommaInBlockArgs:
-  EnforcedStyleForMultiline: 'consistent_comma'
+  Enabled: true
 
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: 'consistent_comma'
