--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,7 +8,7 @@ test:
 
 amazon:
   service: S3
-  access_key_id: ""
-  secret_access_key: ""
-  bucket: "benradler"
+  access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
+  secret_access_key: <%= ENV["AWS_SECRET_ACCESS_KEY"] %>
+  bucket: "benradler-<%= Rails.env %>" # e.g. 'benradler-production'
   region: "us-west-1" # e.g. 'us-east-1'
