add CDN routes for ActiveStorage

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+ASSET_HOST='localhost:3000'
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 FLICKR_API_KEY=
@@ -5,10 +6,10 @@ FLICKR_SECRET=
 FOG_PROVIDER=
 FOG_DIRECTORY=
 FOG_REGION=
-RAILS_HOST=
-RAILS_PORT=
-REDISCLOUD_URL=
-SENDGRID_SMTP_PORT=
+RAILS_HOST='http://localhost'
+RAILS_PORT='5000'
+REDISCLOUD_URL='localhost'
+SENDGRID_SMTP_PORT='587'
 SENDGRID_SMTP_SERVER=
 SENDGRID_SMTP_LOGIN=
 SENDGRID_SMTP_PASSWORD=
