--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@client-side-validations/client-side-validations": "^0.3.0",
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@hotwired/turbo": "^7.1.0",
+    "@hotwired/turbo-rails": "^7.1.0",
     "@rails/webpacker": "5.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
