--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 orbs:
   ruby: circleci/ruby@1.3.0
   node: circleci/node@5.0.0
+  browser-tools: circleci/browser-tools@1.2.3
 
 jobs:
   build:
@@ -31,6 +32,7 @@ jobs:
     parallelism: 3
     docker:
       - image: cimg/ruby:3.1.0-node
+      - image: cimg/node:16.13-browsers
       - image: circleci/postgres:13.5
         environment:
           POSTGRES_USER: circleci-demo-ruby
@@ -50,6 +52,13 @@ jobs:
       # - node/install-packages:
       #     pkg-manager: yarn
       #     cache-key: "yarn.lock"
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
+      - run:
+          command: |
+            google-chrome --version
+            chromedriver --version
+          name: Check install
       - run:
           name: Wait for DB
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
