--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
   browser-tools: circleci/browser-tools@1.2.3
 
 jobs:
-  build:
+  install-ruby:
     docker:
       - image: cimg/ruby:3.1.0
     steps:
@@ -27,6 +27,7 @@ jobs:
           install-yarn: true
           node-version: '16.13'
       - run: node --version
+      - run: yarn install
 
   test:
     parallelism: 3
@@ -73,9 +74,9 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build
+      - install-ruby
       - install-node
       - test:
           requires:
-            - build
+            - install-ruby
             - install-node
