--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,13 @@ orbs:
   browser-tools: circleci/browser-tools@1.2.3
 
 jobs:
-  install-ruby:
+  build:
+    environment:
+      RAILS_ENV: test
+      NODE_ENV: test
     docker:
       - image: cimg/ruby:3.1.0
+      - image: 'cimg/base:stable'
     steps:
       - checkout
       - run: ruby --version
@@ -17,17 +21,11 @@ jobs:
       # - node/install-packages:
       #     pkg-manager: yarn
       #     cache-key: "yarn.lock"
-
-  install-node:
-    docker:
-      - image: 'cimg/base:stable'
-    steps:
-      - checkout
       - node/install:
           install-yarn: true
           node-version: '16.13'
+          # cache-path:
       - run: node --version
-      - run: yarn install
 
   test:
     parallelism: 3
@@ -66,7 +64,9 @@ jobs:
       - run:
           name: Database setup
           command: cp config/database.yml.test config/database.yml && bundle exec rails db:schema:load --trace
-      - run: bundle exec rake webpacker:compile
+      - run: yarn install
+      - run: bin/rails webpacker:compile
+
       # Run rspec in parallel
       - ruby/rspec-test
       - ruby/rubocop-check
@@ -75,9 +75,7 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - install-ruby
-      - install-node
+      - build
       - test:
           requires:
-            - install-ruby
-            - install-node
+            - build
