--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,14 +17,10 @@ jobs:
       - checkout
       - run: ruby --version
       - ruby/install-deps
-      # # Store bundle cache
-      # - node/install-packages:
-      #     pkg-manager: yarn
-      #     cache-key: "yarn.lock"
       - node/install:
           install-yarn: true
           node-version: '16.13'
-          # cache-path:
+          cache-path: "yarn.lock"
       - run: node --version
 
   test:
@@ -50,9 +46,10 @@ jobs:
     steps:
       - checkout
       - ruby/install-deps
-      # - node/install-packages:
-      #     pkg-manager: yarn
-      #     cache-key: "yarn.lock"
+      - node/install:
+          install-yarn: true
+          node-version: '16.13'
+          cache-path: "yarn.lock"
       - browser-tools/install-chrome
       - browser-tools/install-chromedriver
       - run: cp .env.example .env
