--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@
 # [cimg search](https://circleci.com/developer/images)
 # [Example config (with yarn caching, webpacker)](https://discuss.circleci.com/t/webpacker-compile-freezes-on-compile/33055)
 # [Circleci provided example](https://github.com/CircleCI-Public/circleci-demo-ruby-rails/blob/master/.circleci/config.yml)
+# [caching](https://circleci.com/docs/2.0/caching/)
 #
 version: 2.1
 
@@ -10,6 +11,7 @@ orbs:
   ruby: circleci/ruby@1.3.0
   node: circleci/node@5.0.0
   browser-tools: circleci/browser-tools@1.2.3
+  dscar-brakeman: moneyforward/dscar-brakeman@1.2.0
 
 jobs:
   build:
@@ -108,6 +110,9 @@ jobs:
 
       # run rubocop
       - ruby/rubocop-check
+
+      # run brakeman
+      - dscar-brakeman/analyze
 
 workflows:
   version: 2
