--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "fitvids": "1.0.2",
     "imagesloaded": "^4.1.4",
     "infinite-scroll": "^4.0.0",
-    "marked": "0.3.18",
+    "marked": "^4.0.10",
     "masonry-layout": "^4.2.2",
     "photoswipe": "^4.1.3",
     "postcss": "^8.2.10",
