--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "postcss": "^8.2.10",
     "postcss-loader": "^4.2.0",
     "sass": "^1.32.7",
-    "tailwindcss": "^3.0.0"
+    "tailwindcss": "3.0.11"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
