--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "engines": {
     "npm": ">=8.0.0",
-    "node": ">=16.0.0",
+    "node": ">=16.0.0 <17",
     "yarn": ">= 1.22.0"
   }
 }
