--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "@client-side-validations/client-side-validations": "^0.3.0",
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@hotwired/turbo": "^7.1.0",
-    "@rails/webpacker": "5.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
@@ -14,6 +13,8 @@
     "alpine-turbo-drive-adapter": "^1.1.0",
     "alpinejs": "^2.8.2",
     "autoprefixer": "^10.2.6",
+    "esbuild": "^0.14.23",
+    "esbuild-sass-plugin": "^2.2.3",
     "file-loader": "^6.2.0",
     "fitvids": "1.0.2",
     "imagesloaded": "^4.1.4",
@@ -26,12 +27,13 @@
     "sass": "^1.32.7",
     "tailwindcss": "3.0.11"
   },
-  "devDependencies": {
-    "webpack-dev-server": "^3.10.3"
-  },
+  "devDependencies": {},
   "engines": {
     "npm": ">=8.0.0",
     "node": ">=16.0.0 <17",
     "yarn": ">= 1.22.0"
+  },
+  "scripts": {
+    "build": "node esbuild.config.js"
   }
 }
