--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@activeadmin/activeadmin": "^2.7.0",
     "@client-side-validations/client-side-validations": "^0.3.0",
+    "@deanc/esbuild-plugin-postcss": "^1.0.2",
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@hotwired/turbo": "^7.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
