--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "marked": "^4.0.10",
     "masonry-layout": "^4.2.2",
     "photoswipe": "^4.1.3",
-    "postcss": "^8.2.10",
+    "postcss": "^8.4.12",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^14.1.0",
     "postcss-loader": "^4.2.0",
+    "postcss-preset-env": "^7.4.3",
     "sass": "^1.32.7",
     "tailwindcss": "3.0.11"
   },
