--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss-import": "^14.1.0",
     "postcss-loader": "^4.2.0",
     "postcss-preset-env": "^7.4.3",
+    "postcss-url": "^10.1.3",
     "sass": "^1.32.7",
     "tailwindcss": "3.0.11"
   },
