--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "dependencies": {
     "@activeadmin/activeadmin": "^3.0.0",
+    "@babel/core": "^7.22.9",
+    "@babel/plugin-transform-runtime": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/runtime": "^7.22.6",
     "@client-side-validations/client-side-validations": "^0.3.0",
     "@hotwired/turbo": "^7.3.0",
-    "@rails/webpacker": "^6.0.0-rc.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -14,6 +17,8 @@
     "alpine-turbo-drive-adapter": "1.1.0",
     "alpinejs": "2.8.2",
     "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.3",
+    "compression-webpack-plugin": "^10.0.0",
     "core-js": "3.20.1",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
@@ -34,16 +39,20 @@
     "postcss-preset-env": "^9.0.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
+    "shakapacker": "^7.0.2",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-merge": "^5.9.0"
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack": "^5.88.2",
+    "webpack-assets-manifest": "^5.1.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^5.9.0",
+    "webpack-sources": "^3.2.3"
   },
   "version": "0.1.0",
   "babel": {
     "presets": [
-      "./node_modules/@rails/webpacker/package/babel/preset.js"
+      "./node_modules/shakapacker/package/babel/preset.js"
     ]
   },
   "browserslist": [
