--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "postcss-preset-env": "^9.0.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
-    "shakapacker": "^7.0.2",
+    "shakapacker": "6.5.6",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
