--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "private": true,
   "dependencies": {
-    "@activeadmin/activeadmin": "^3.0.0",
+    "@activeadmin/activeadmin": "2.13.0",
     "@babel/core": "^7.22.9",
     "@babel/plugin-transform-runtime": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
