--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ version: 2.1
 orbs:
   ruby: circleci/ruby@1.3.0
   node: circleci/node@5.0.0
-  browser-tools: circleci/browser-tools@1.2.3
+  browser-tools: circleci/browser-tools@1.4.3
   dscar-brakeman: moneyforward/dscar-brakeman@1.2.0
 
 jobs:
@@ -97,7 +97,7 @@ jobs:
             - webpack-{{ .Revision }}
 
       # webpacker compilation
-      - run: bin/rails webpacker:compile
+      - run: bin/rails shakapacker:compile
 
       # save webpacker cache
       - save_cache:
