--- a/package.json
+++ b/package.json
@@ -1,37 +1,70 @@
 {
-  "license": "UNLICENSED",
+  "name": "app",
+  "private": true,
+  "engines": {
+    "npm": ">=8.0.0 <9",
+    "node": ">=16.0.0 <17",
+    "yarn": ">= 1.22.0 <2"
+  },
   "dependencies": {
-    "@activeadmin/activeadmin": "^2.7.0",
+    "@activeadmin/activeadmin": "2.13.0",
+    "@babel/core": "^7.22.9",
+    "@babel/plugin-transform-runtime": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/runtime": "^7.22.6",
     "@client-side-validations/client-side-validations": "^0.3.0",
-    "@fullhuman/postcss-purgecss": "^4.1.3",
-    "@hotwired/turbo": "^7.1.0",
-    "@rails/webpacker": "5.4.0",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/line-clamp": "^0.3.0",
-    "@tailwindcss/typography": "^0.5.0",
+    "@hotwired/turbo": "^7.3.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.4",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.9",
     "alpine-magic-helpers": "^1.2.2",
-    "alpine-turbo-drive-adapter": "^1.1.0",
-    "alpinejs": "^2.8.2",
-    "autoprefixer": "^10.2.6",
+    "alpine-turbo-drive-adapter": "1.1.0",
+    "alpinejs": "2.8.2",
+    "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.3",
+    "compression-webpack-plugin": "^10.0.0",
+    "core-js": "3.20.1",
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "expose-loader": "^4.1.0",
     "file-loader": "^6.2.0",
     "fitvids": "1.0.2",
-    "imagesloaded": "^4.1.4",
-    "infinite-scroll": "^4.0.0",
-    "marked": "^4.0.10",
-    "masonry-layout": "^4.2.2",
-    "photoswipe": "^4.1.3",
-    "postcss": "^8.2.10",
-    "postcss-loader": "^4.2.0",
-    "sass": "^1.32.7",
-    "tailwindcss": "3.0.11"
+    "imagesloaded": "4.1.4",
+    "infinite-scroll": "4.0.0",
+    "jquery": "^3.7.0",
+    "marked": "4.0.10",
+    "masonry-layout": "4.2.2",
+    "mini-css-extract-plugin": "^2.7.6",
+    "photoswipe": "4.1.3",
+    "postcss": "^8.4.26",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^9.0.0",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
+    "shakapacker": "7.0.2",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack": "^5.88.2",
+    "webpack-assets-manifest": "^5.1.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^5.9.0",
+    "webpack-sources": "^3.2.3"
   },
+  "version": "0.1.0",
+  "babel": {
+    "presets": [
+      "./node_modules/shakapacker/package/babel/preset.js"
+    ]
+  },
+  "browserslist": [
+    "defaults"
+  ],
   "devDependencies": {
-    "webpack-dev-server": "^3.10.3"
-  },
-  "engines": {
-    "npm": ">=8.0.0",
-    "node": ">=16.0.0 <17",
-    "yarn": ">= 1.22.0"
+    "@webpack-cli/serve": "^2.0.5",
+    "webpack-dev-server": "^4.15.1"
   }
 }
