--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "postcss-preset-env": "^9.0.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
-    "shakapacker": "7.0.2",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
@@ -52,12 +51,13 @@
     "webpack-assets-manifest": "^5.1.0",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.9.0",
+    "webpack-remove-empty-scripts": "^1.0.3",
     "webpack-sources": "^3.2.3"
   },
   "version": "0.1.0",
   "babel": {
     "presets": [
-      "./node_modules/shakapacker/package/babel/preset.js"
+      "@babel/preset-env"
     ]
   },
   "browserslist": [
@@ -66,5 +66,8 @@
   "devDependencies": {
     "@webpack-cli/serve": "^2.0.5",
     "webpack-dev-server": "^4.15.1"
+  },
+  "scripts": {
+    "build": "webpack --config ./config/webpack/webpack.config.js"
   }
 }
