--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -39,7 +39,10 @@ Metrics/BlockLength:
   Enabled: false
 
 Metrics/ClassLength:
-  Max: 105
+  Max: 134
+
+Metrics/CyclomaticComplexity:
+  Max: 8
 
 Style/NumericLiterals:
   Enabled: false
