--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -38,6 +38,9 @@ Metrics/MethodLength:
 Metrics/BlockLength:
   Enabled: false
 
+Metrics/ClassLength:
+  Max: 126
+
 Style/NumericLiterals:
   Enabled: false
 
