--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "postcss-preset-env": "^9.0.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
-    "shakapacker": "7.0.2",
+    "shakapacker": "^7.2",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
