--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": ">=18.0.0 <19",
     "yarn": ">= 1.22.0 <2"
   },
+  "packageManager": "yarn@1.22.19",
   "dependencies": {
     "@activeadmin/activeadmin": "2.13.0",
     "@babel/core": "^7.22.9",
@@ -44,7 +45,7 @@
     "postcss-preset-env": "^9.0.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
-    "shakapacker": "^7.2",
+    "shakapacker": "^8",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
