--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "expose-loader": "^4.1.0",
     "file-loader": "^6.2.0",
     "fitvids": "1.0.2",
-    "image-webpack-loader": "^8.1.0",
+    "image-minimizer-webpack-plugin": "^4.0.1",
+    "imagemin": "^9.0.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^11.0.0",
     "imagesloaded": "4.1.4",
     "infinite-scroll": "4.0.0",
     "jquery": "^3.7.0",
