--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "alpine-magic-helpers": "^1.2.2",
     "alpine-turbo-drive-adapter": "1.1.0",
     "alpinejs": "2.8.2",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "compression-webpack-plugin": "^10.0.0",
     "core-js": "3.20.1",
-    "css-loader": "^6.8.1",
+    "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "expose-loader": "^4.1.0",
     "file-loader": "^6.2.0",
@@ -41,15 +41,14 @@
     "postcss": "^8.4.31",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^15.1.0",
-    "postcss-loader": "^7.3.3",
+    "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^9.0.0",
-    "sass": "^1.63.6",
-    "sass-loader": "^13.3.2",
-    "shakapacker": "^8",
-    "style-loader": "^3.3.3",
-    "tailwindcss": "^3.3.3",
+    "sass": "^1.77.4",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.3",
     "terser-webpack-plugin": "^5.3.9",
-    "webpack": "^5.88.2",
+    "webpack": "^5.91.0",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.9.0",
@@ -67,5 +66,8 @@
   "devDependencies": {
     "@webpack-cli/serve": "^2.0.5",
     "webpack-dev-server": "^4.15.1"
+  },
+  "scripts": {
+    "build": "webpack --config webpack.config.js"
   }
 }
