--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "packageManager": "yarn@1.22.19",
   "dependencies": {
-    "@activeadmin/activeadmin": "2.13.0",
+    "@activeadmin/activeadmin": "^4.0.0-beta7",
     "@babel/core": "^7.22.9",
     "@babel/plugin-transform-runtime": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/runtime": "^7.22.6",
     "@client-side-validations/client-side-validations": "^0.3.0",
     "@hotwired/turbo": "^7.3.0",
+    "@rails/ujs": "^7.0.8-3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -34,6 +35,7 @@
     "imagesloaded": "4.1.4",
     "infinite-scroll": "4.0.0",
     "jquery": "^3.7.1",
+    "jquery-ui": "^1.13.3",
     "marked": "4.0.10",
     "masonry-layout": "4.2.2",
     "mini-css-extract-plugin": "^2.9.0",
@@ -69,6 +71,6 @@
   },
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:watch": "yarn run build --watch"
   }
 }
