--- a/config/shakapacker.yml
+++ b/config/shakapacker.yml
@@ -42,9 +42,11 @@ development:
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
+    disable_host_check: true
     server: http
-    host: localhost
-    port: 3035
+    host: <%= ENV.fetch("SHAKAPACKER_DEV_SERVER_HOST", "webpack") %>
+    port: <%= ENV.fetch("SHAKAPACKER_DEV_SERVER_PORT", 3035) %>
+    public: <%= ENV.fetch("SHAKAPACKER_DEV_SERVER_PUBLIC", "localhost:3035") %>
     # Hot Module Replacement updates modules while the application is running without a full reload
     hmr: false
     # Defaults to the inverse of hmr. Uncomment to manually set this.
