--- a/heroku.yml
+++ b/heroku.yml
@@ -3,11 +3,9 @@ build:
     web: Dockerfile
 
 release:
-  image: web
   command:
     - bundle exec rails db:migrate
     - bundle exec rails cache_warmer:flickr
 
 run:
-  web:
-    command: bundle exec puma -C config/puma.rb
+  web: bundle exec puma -C config/puma.rb
