--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -1,7 +1,7 @@
 ARG RUBY_VERSION=3.3.8
 FROM ruby:${RUBY_VERSION}
 
-# 1) System deps + Node.js 22.x via NodeSource
+# 1) System dependencies + Node.js 22.x
 RUN apt-get update -qq \
  && apt-get install -y --no-install-recommends \
       curl gnupg build-essential postgresql-client \
@@ -14,40 +14,30 @@ RUN npm install -g yarn@1.22.19
 
 WORKDIR /app
 
-# 3) By default build for PRODUCTION — override at build-time with
-#    `--build-arg RAILS_ENV=development` if you want local-dev.
+# 3) Copy & install gems (skip dev/test in prod builds)
+COPY Gemfile Gemfile.lock ./
 ARG RAILS_ENV=production
 ENV RAILS_ENV=${RAILS_ENV}
-
-# 4) Ensure Rails will serve compiled assets
-ENV RAILS_SERVE_STATIC_FILES=true
-
-# 5) Install gems (skip dev/test in prod)
-COPY Gemfile Gemfile.lock ./
 RUN if [ "$RAILS_ENV" = "production" ]; then \
       bundle config set without 'development test'; \
     fi \
  && bundle install --jobs=4
 
-# 6) Install JS dependencies (including devDeps for webpack)
+# 4) Copy & install JS dependencies (including devDeps)
 COPY package.json yarn.lock ./
 ENV YARN_PRODUCTION=false
 RUN yarn install --frozen-lockfile
 
-# 7) Copy the rest of your app
+# 5) Copy application code
 COPY . .
 
-# 8) Compile your JS/CSS packs (only runs if RAILS_ENV=production)
+# 6) (Optional) Precompile assets in production
 RUN if [ "$RAILS_ENV" = "production" ]; then \
       bundle exec rake assets:precompile; \
     fi
 
-EXPOSE 3000
-
-# 9) Copy in the entrypoint script (either run release tasks or run the rails server)
-COPY entrypoint.sh /usr/bin/entrypoint.sh
-RUN chmod +x /usr/bin/entrypoint.sh
-EXPOSE 3000
-
-# 10) run it
-ENTRYPOINT ["entrypoint.sh"]
+# 7) Default entrypoint: allow arbitrary commands (e.g. migrations, cache warming)
+ENTRYPOINT ["bash", "-lc"]
+# no CMD, so callers must specify what to run, e.g.:
+#   docker run release-image \
+#     bundle exec rails db:migrate && bundle exec rails cache_warmer:flickr
